# cali

./: .gitignore  Cargo.toml  README.md  calendar.db
examples/: help.md
src/: calendar.rs  cali_error.rs  database.rs  event.rs  lib.rs  main.rs  parser.rs  time.rs
tests/: test.db  tests.rs
