[package]
name = "cali"
authors = ["Jon Duesterhoeft <jon.duesterhoeft@gmail.com>"]
version = "0.1.1"
about = "A simple command line calendar implemented in Rust."
description = "A simple command line calendar implemented in Rust."
edition = "2021"
readme = "README.md"
repository = "https://github.com/jonduesterhoeft/cali"
license = "MIT"
license_file = "LICENSE"
keywords = ["cli", "calendar", "todo", "utility"]
exclude = ["/.github"]

[dependencies]
chrono = { version = "0.4.26" }
chrono-tz = "0.8.3"
clap = { version = "4.0", features = ["derive"] }
rusqlite = { version = "0.25.0", features = ["bundled"] }
uuid = { version = "1.4.1", features = ["v4"] }
